--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,36 @@
+name: Build and Push Docker Image to Docker Hub
 
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
+jobs:
+  build-and-push-docker:
+    runs-on: ubuntu-latest
+
+    steps:
+    # 检出当前仓库代码
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    # 构建 Docker 镜像
+    - name: Build Docker Image
+      run: |
+        docker build -t scrapyd-service -f docker/Dockerfile .
+
+    - name: Log in to Custom Docker Registry
+      uses: docker/login-action@v2
+      with:
+        registry: dockerhub.jzhangluo.com # 替换为你的自建 Docker Registry URL，如 "myregistry.example.com"
+        username: "self" # 设置为 GitHub Secrets 中的用户名
+        password: "Zl123456"
+
+    # 标记并推送 Docker 镜像到 Docker Hub
+    - name: Tag and Push Docker Image
+      run: |
+        docker tag scrapyd-service dockerhub.jzhangluo.com/scrapyd-test/scrapyd-service:1.0.0
+        docker push dockerhub.jzhangluo.com/scrapyd-test/scrapyd-service:1.0.0
