--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
     # 构建 Docker 镜像
     - name: Build Docker Image
       run: |
-        docker build -t scrapyd-service -f docker/Dockerfile .
+        docker build -t scrapyd-release -f docker/Dockerfile .
 
     - name: Log in to Custom Docker Registry
       uses: docker/login-action@v2
@@ -32,5 +32,5 @@ jobs:
     # 标记并推送 Docker 镜像到 Docker Hub
     - name: Tag and Push Docker Image
       run: |
-        docker tag scrapyd-service dockerhub.jzhangluo.com/scrapyd-test/scrapyd-service:1.0.0
-        docker push dockerhub.jzhangluo.com/scrapyd-test/scrapyd-service:1.0.0
+        docker tag scrapyd-release dockerhub.jzhangluo.com/scrapyd-test/scrapyd-release:1.0.0
+        docker push dockerhub.jzhangluo.com/scrapyd-test/scrapyd-release:1.0.0
